# robot-control

./: .gitignore  README.md
robot_control/: README.md  package.xml  requirements.txt  setup.py
robot_control/config/: px4_config.yaml  px4_pluginlists.yaml  px4_sim_params.yaml  robot_control.yaml  team.yaml  vehicle_params.yaml
robot_control/include/robot_control/: abstract_vehicle.hpp
robot_control/launch/: environment.launch.py  gazebo.launch.py  ignition.launch.py  run_vehicles.launch.py  spawn_vehicle.launch.py
robot_control/robot_control/: __init__.py  abstract_drone.py  abstract_vehicle.py  micrortps_agent.py  sitl.py
robot_control/robot_control/airsim/: drone.py  my_multirotor_client.py  vehicle.py
robot_control/robot_control/cli/: common.py  drone_client.py  shell.py  vehicle_client.py
robot_control/robot_control/ignition/: drone.py  rover.py
robot_control/robot_control/launch/: common.py  environment.py  gazebo.py  ignition.py  run_vehicles.py  spawn_vehicle.py  structs.py
robot_control/robot_control/mavros/: drone.py  vehicle.py
robot_control/robot_control/rtps/: drone.py  vehicle.py
robot_control/robot_control/utils/: __init__.py  math.py  pid_position_controller.py  structs.py
robot_control/rviz/: single.rviz
robot_control/scripts/: ex_mavros.py  sitl.py
robot_control/test/: single_drone.test.py
robot_control_interfaces/: CMakeLists.txt  package.xml
robot_control_interfaces/action/: ArmTakeoff.action  FollowWaypoints.action  GoWaypoint.action  RunBT.action
robot_control_interfaces/msg/: Waypoint.msg
