<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mchale.blake@gmail.com">bmchale</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ros_testing</test_depend>

  <depend>ros2_utils</depend>
  <depend>xacro</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <!-- Gazebo dependencies -->
  <depend>ros_ign_gazebo</depend>
  <depend>ros_ign_bridge</depend>
  <!-- Mavros dependencies -->
  <depend>mavros</depend>
  <depend>geographiclib</depend>
  <depend>geographic_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
